Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-110870

no matching function for call to min

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.4.3, 6.5.0, 6.6.0
    • 6.4.1
    • Quick: 3D
    • None
    • NetBSD 10.99.2/amd64
      gcc 10.4.0
    • Other
    • 44426ac80 (dev), 5cca3cf26 (6.5), 0c5794680 (6.4)

    Description

      When compiling qtquick3d 6.4.1 on NetBSD 10.99.2/amd64 using the default compiler, gcc 10.4.0, I see:

      qquick3dparticleemitter.cpp:723:84: error: no matching function for call to 'min(float, _gnu_cxx::enable_if<true, double>::_type)'

      (for three lines)

       

      Adding a cast fixes the issue for me, I'll attach a patch.

       

      Attachments

        For Gerrit Dashboard: QTBUG-110870
        # Subject Branch Project Status CR V

        Activity

          People

            qt.team.graphics.and.multimedia Qt Graphics Team
            _wiz_ Thomas Klausner
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes