Fix std::min to build on gcc 10.4 on NetBSD

Fixes: QTBUG-110870
Change-Id: I7bf60beb52b8e3ea449a52f933f1750d7536b1af
Reviewed-by: Inho Lee <inho.lee@qt.io>
Reviewed-by: Andy Nichols <andy.nichols@qt.io>
(cherry picked from commit 44426ac805804045dbd2e0bb8adf6388bf9c3080)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>